--- a/static/playground.html
+++ b/static/playground.html
@@ -56,6 +56,7 @@
     <script>
       window.addEventListener('load', function(event) {
         GraphQLPlayground.init(document.getElementById('root'), {
+          subscriptionEndpoint: '/graphql',
           endpoint: '/graphql',
         });
       });
