wraps js files route with /graphiql

--- a/static/graphiql.html
+++ b/static/graphiql.html
@@ -17,6 +17,6 @@
 </head>
 <body>
   <div id="main"></div>
-  <script src="./main.js"></script>
+  <script src="./graphiql/main.js"></script>
 </body>
 </html>
