--- a/static/playground.html
+++ b/static/playground.html
@@ -53,13 +53,6 @@
         <span class="title">GraphQL Playground</span>
       </div>
     </div>
-    <script>
-      window.addEventListener('load', function(event) {
-        GraphQLPlayground.init(document.getElementById('root'), {
-          subscriptionEndpoint: '/graphql',
-          endpoint: '/graphql',
-        });
-      });
-    </script>
+    <script src="/playground/init.js"></script>
   </body>
 </html>
