use correct path in graphiql ide

--- a/static/graphiql.html
+++ b/static/graphiql.html
@@ -17,6 +17,7 @@
 </head>
 <body>
   <div id="main"></div>
+  <script src="./graphiql/config.js"></script>
   <script src="./graphiql/main.js"></script>
 </body>
 </html>
