docs: fix links

--- a/static/graphiql.html
+++ b/static/graphiql.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <title>GraphiQL via fastify-gql</title>
+  <title>GraphiQL via Mercurius</title>
   <meta name="robots" content="noindex"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <style>
