--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         --sidebar-name-padding: 0;
         --code-font-size: 0.9em;
       }
-      .sidebar > h1 {
+    .sidebar > h1 {
         margin-bottom: -0.75em;
         margin-top: 0.75em;
       }
-      .sidebar > h1 img {
+    .sidebar > h1 img {
         height: 4em;
       }
       .markdown-section a code {
@@ -41,6 +41,38 @@
       }
       .markdown-section code:not([class*='lang-']):not([class*='language-']) {
         white-space: unset;
+      }
+
+      #issues {
+        display: flex;
+        flex-direction: column;
+      }
+
+      .good-issue {
+        margin: 0 0 .5em 0;
+      }
+
+      .error-result,
+      .no-issues {
+        padding: 1rem;
+        width: 100%;
+        text-align: center;
+        border-top: 1px solid #ccc;
+      }
+
+      .spinner {
+        animation: rotate360 1s linear infinite;
+        transform: translateZ(0);
+
+        border-top: 3px solid #04625C;
+        border-right: 3px solid #04625C;
+        border-bottom: 3px solid #04625C;
+        border-left: 3px solid #333;
+        background: transparent;
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        margin: 0 auto;
       }
     </style>
   </head>
@@ -51,7 +83,65 @@
         loadSidebar: 'docsify/sidebar.md',
         name: 'Mercurius',
         repo: 'https://github.com/mercurius-js/mercurius',
-        auto2top: true
+      auto2top: true,
+      vueMounts: {
+        '#issues': {
+          data: function () {
+            return {
+              loading: false,
+              error: null,
+              issues: [],
+              projects: {},
+              filteredIssues: []
+            }
+          },
+          created() {
+            this.loading = true
+            // fetch('https://goodfirstissue.fastify.io/api/find-issues?org=mercurius-js')
+            fetch('https://gh-issues-finder-backend-k44evywkza-ew.a.run.app/api/find-issues?org=mercurius-js')
+              .then(resp => resp.json())
+              .then(data => {
+                this.issues = data.results
+                this.filteredIssues = data.results
+                this.projects = data.results.reduce((acc, curr) => {
+                  if (!acc[curr.project.name]) {
+                    acc[curr.project.name] = { count: 0, selected: true }
+                  }
+                  acc[curr.project.name].count += 1
+                  return acc
+                }, {})
+              })
+              .catch(err => {
+                this.error = err.message
+              })
+              .finally(() => {
+                this.loading = false
+              })
+          },
+          methods: {
+            toggle_toggleProject(name, selected) {
+              const projects = { ...this.projects }
+              if (projects[name]) {
+                projects[name].selected = typeof selected === 'undefined' ? !projects[name].selected : selected
+              }
+              this.filteredIssues = this.issues.filter(issue => {
+                return projects[issue.project.name].selected
+              })
+              this.projects = projects
+            },
+            _toggleProjects(selected) {
+              const projects = { ...this.projects }
+              for (let name in projects) {
+                projects[name].selected = selected
+              }
+              this.filteredIssues = this.issues.filter(issue => {
+                return projects[issue.project.name].selected
+              })
+              this.projects = projects
+            }
+          }
+        },
+      },
       }
     </script>
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
@@ -59,5 +149,6 @@
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
     <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-typescript.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/vue@2/dist/vue.min.js"></script>
   </body>
 </html>
