docs: added favicon

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css"
       media="(prefers-color-scheme: dark)"
     />
-
+    <link rel="shortcut icon" type="image/x-icon" href="/static/img/favicon.ico">
     <style>
       :root {
         --base-font-size: 16px;
